--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -31,10 +31,59 @@
     <form class="mt-4 m-4">
         <div class="mb-5 w-full justify-start">
             <label for="large-input" class="w-full md:text-lg lg:text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100 m-2">{{ 'SHOPPING_CART._note' | translate }}:</label>
-            <input type="text" id="large-input" class="w-full p-4 text-gray-900 border border-primary-100 rounded-lg bg-gray-50 text-base focus:border-primary-50">
+            <input type="text" id="large-input" class="w-full p-4 text-gray-900 border border-primary-100 rounded-lg bg-gray-50 text-base focus:border-primary-50 shadow-lg">
         </div>
         <div class="mb-5 w-full justify-start">
             <h5 class="md:text-lg lg:text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100 m-2">{{ 'SHOPPING_CART._choose_bill' | translate }}:</h5>
+            @if(billing_accounts.length>0){
+
+
+                <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+                    <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+                        <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
+                            <tr>
+                                <th scope="col" class="px-6 py-3">
+                                    {{ 'SHOPPING_CART._email' | translate }}
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    {{ 'SHOPPING_CART._postalAddress' | translate }}
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    {{ 'SHOPPING_CART._phone' | translate }}
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @for (bill of billing_accounts; track bill.id; let idx = $index) {
+                                <tr (click)="selectBill(idx)" class="border-b hover:bg-gray-200" [ngClass]="bill.selected == true ? 'bg-primary-30' : 'bg-white'">
+                                    <td class="px-6 py-4">
+                                        {{bill.email}}
+                                    </td>
+                                    <td class="px-6 py-4">
+                                        {{bill.postalAddress.street}}, {{bill.postalAddress.postCode}} ({{bill.postalAddress.city}}) {{bill.postalAddress.stateOrProvince}}
+                                    </td>
+                                    <td class="px-6 py-4">
+                                        {{bill.telephoneNumber}}
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                
+            } @else {
+                <div class="z-10 mt-2 text-red-900 border border-primary-100 rounded-lg bg-gray-50 text-base shadow-lg">
+                    
+                    <p class="text-red-800 m-2">{{ 'SHOPPING_CART._billing_check' | translate }}
+                        <a href="#" class="ml-2 inline-flex items-center font-medium text-primary-50 hover:underline">
+                            {{ 'SHOPPING_CART._click_here' | translate }}
+                        <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                        </svg>
+                        </a>
+                    </p>
+                </div>                
+            }
         </div>
         <div class="mb-5 w-full justify-start">
             <h5 class="md:text-lg lg:text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100 m-2">{{ 'SHOPPING_CART._cart' | translate }}:</h5>
@@ -46,7 +95,7 @@
                 </button>
                     
                 <!-- Dropdown menu -->
-                <div [id]="item.id" class="z-10 hidden mt-2 text-gray-900 border border-primary-100 rounded-lg bg-gray-50 text-base">
+                <div [id]="item.id" class="z-10 hidden mt-2 text-gray-900 border border-primary-100 rounded-lg bg-gray-50 text-base shadow-lg">
                     <div class="grid grid-cols-80/20 items-center align-items-center m-2">
                         <h5 class="md:text-xl lg:text-2xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{item.name}}</h5>
                         <div class="h-[50px]">
@@ -89,7 +138,7 @@
                         <div class="flex justify-center mb-2">
                             <div class="grid grid-flow-row grid-cols-3 gap-4 w-3/4">
                                 @for (char of item.options.characteristics; track char.value) {
-                                    <div class="justify-start bg-white border border-primary-100 rounded-lg">
+                                    <div class="justify-start bg-white border border-primary-100 rounded-lg w-full">
                                         <h5 class="md:text-lg lg:text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100 m-2">{{char.characteristic.name}}:</h5>
                                         <div class="flex items-center ml-8 mr-2 mb-2">
                                             <input disabled checked id="disabled-checked-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
@@ -108,6 +157,12 @@
                 
         </div>
       </form>
+      <div class="flex w-full justify-end">
+        <button type="button" href="https://dome-marketplace.eu/" target="_blank" class="m-2 flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+            {{ 'SHOPPING_CART._buy' | translate }}
+            <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          </button>
+      </div>
   </div>
 
 </div>
