--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,8 +1,15 @@
-<div class="w-full h-full bg-secondary-50 rounded-lg  dark:border-gray-700 border-secondary-50 border">
+<div class="w-full h-full bg-secondary-50 rounded-lg dark:border-gray-700 border-secondary-50 border">
 
-  <a (click)="goToProductDetails(productOff)" class="flex cursor-pointer justify-center w-full h-[200px] box-decoration-clone">
-    <img class=" rounded-t-lg w-fit h-[200px]" src="{{getProductImage()}}" alt="product image" />
-  </a>
+
+  <div (click)="goToProductDetails(productOff)" class="rounded overflow-hidden cursor-pointer">
+    <div class="relative h-48 flex justify-center items-center">
+      <!-- Imagen de fondo difuminada -->
+      <div class="absolute inset-0 bg-cover bg-center opacity-75" style="background-color: {{bgColor}};"></div>
+      <!-- Imagen superior -->
+      <img crossorigin="anonymous" #myProdImage class="h-5/6 w-5/6 object-contain z-10" src="{{getProductImage()}}" alt="Descripción de la imagen">
+    </div>
+  </div>
+
   <div class="bg-cover bg-right-bottom bg-opacity-25 rounded-lg" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
     <div class="px-5 py-5 bg-secondary-50/95 ">
       <div class="h-[30px] overflow-y-hidden">
@@ -64,7 +71,7 @@
     <div class="relative w-full max-w-7xl max-h-full rounded-t-lg">
         <!-- Modal content -->
         <div class="relative bg-white rounded-lg shadow dark:border-gray-600 dark:bg-secondary-100 bg-cover bg-right-bottom rounded-lg" (click)="$event.stopPropagation();">
-            <!-- 
+            <!--
             <div class="flex items-center justify-between pr-2 pt-2 bg-secondary-50 rounded-t-lg dark:bg-white dark:border-gray-700 border-secondary-50">
               <button (click)="hideModal()" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="details-modal">
                   <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
@@ -119,7 +126,7 @@
               </div>
               <hr class="h-px bg-gray-200 border-0 dark:bg-gray-700">
           </div>
-          
+
         <!-- END HEADER CARD -->
 
 
@@ -166,7 +173,7 @@
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                 </svg>
                 </button>
-            </div>            
+            </div>
         </div>
     </div>
   </div>
@@ -225,7 +232,7 @@
                           <div class="flex items-center">
                             <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                             <label [for]="'price-radio-'+idx" class="inline-flex items-center justify-center w-full p-5 border border-gray-200 rounded-lg cursor-pointer dark:border-gray-700 dark:peer-checked:border-primary-50 peer-checked:border-primary-100">
-                              
+
                               <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
                                 <div class="bg-green-500 rounded-t-lg w-full">
                                     <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900 w-full">{{price.name}}</h5>
@@ -233,11 +240,11 @@
                                 <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
                                 <p class="flex justify-center font-normal text-gray-700">/{{price.recurringChargePeriodType}}</p>
                                 <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
-                              </div> 
-                            
+                              </div>
+
                             </label>
                             </div>
- 
+
                         } @else if (price.priceType == 'usage') {
                           <div class="flex items-center">
                             <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer items-center w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
@@ -246,7 +253,7 @@
                               <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
                                   <div class="bg-yellow-300 rounded-t-lg w-full">
                                       <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{price.name}}</h5>
-                                  </div>                                
+                                  </div>
                                   <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
                                   <p class="flex justify-center font-normal text-gray-700">/{{price.unitOfMeasure?.units}}</p>
                                   <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
@@ -261,21 +268,21 @@
                             <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full justify-center">
                                 <div class="bg-blue-500 rounded-t-lg w-full">
                                     <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{price.name}}</h5>
-                                </div>                                
+                                </div>
                                 <p class="flex justify-center font-normal text-gray-700"> <b class="text-xl mr-2">{{price.price?.value}}</b> {{price.price?.unit}}</p>
                                 <p class="flex justify-center mb-2 font-normal text-gray-700">{{price.description}}</p>
                             </div>
                           </label>
-                        </div>                     
-                        }                      
+                        </div>
+                        }
                     }
                   </div>
                   </div>
-                  }                
+                  }
                   @if(check_char){
                     <div class="pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="char" role="tabpanel" aria-labelledby="char-tab">
                       <h5 class="text-3xl font-semibold tracking-tight text-primary-100 dark:text-primary-50">Selecciona características:</h5>
-  
+
                       @for(char of prodSpec.productSpecCharacteristic; track char.id; let charidx = $index){
                         <div class="min-h-19 pb-2">
                           <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{char.name}}:</h5>
@@ -294,7 +301,7 @@
                             }
                           </div>
                         }
-                        </div>                  
+                        </div>
                       }
                     </div>
                     }
@@ -309,24 +316,24 @@
                           <label for="terms-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">He leído y acepto los términos y condiciones</label>
                       </div>
                       </div>
-                    }             
+                    }
                     @if(check_terms == true && selected_terms == false){
                       <button disabled (click)="addProductToCart(productOff,true)" type="button" class="cursor-not-allowed mt-2 w-full flex items-center justify-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                         <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
                         <path d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"/>
                         </svg>
                         {{ 'CARD._add_cart' | translate }}
-                      </button> 
+                      </button>
                     } @else {
                       <button (click)="addProductToCart(productOff,true)" type="button" class="mt-2 w-full flex items-center justify-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                         <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
                         <path d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"/>
                         </svg>
                         {{ 'CARD._add_cart' | translate }}
-                      </button> 
+                      </button>
                     }
             </div>
-          
+
         </div>
     </div>
   </div>
