--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -123,8 +123,8 @@
                       }
                   </div>
               </div>
-              <div class="h-[200px]">
-                  <img class="rounded-r-lg w-full h-[200px]" src="{{getProductImage()}}" alt="product image" />
+              <div class="overflow-hidden flex justify-center items-center bg-white">
+                <img class="rounded-r-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
               </div>
               <hr class="h-px bg-gray-200 border-0 dark:bg-gray-700">
           </div>
