ADDS a container in product-details

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -123,8 +123,8 @@
                       }
                   </div>
               </div>
-              <div class="overflow-hidden flex justify-center items-center bg-white">
-                <img class="rounded-r-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
+              <div class="overflow-hidden flex justify-center items-center bg-white dark:bg-primary-50">
+                <img class="rounded-r-lg h-5/6 w-5/6 object-contain mix-blend-multiply saturate-200" src="{{getProductImage()}}" alt="product image" />
               </div>
               <hr class="h-px bg-gray-200 border-0 dark:bg-gray-700">
           </div>
