--- a/src/app/pages/catalogs/catalogs.component.html
+++ b/src/app/pages/catalogs/catalogs.component.html
@@ -1,4 +1,4 @@
-<div class="pr-8 pl-12 pb-8 pt-2">
+<div class="container mx-auto pt-2">
 
     <h1 class="mb-8 mt-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-4xl lg:text-5xl dark:text-white w-full"><span class="underline underline-offset-3 decoration-8 decoration-primary-100 dark:decoration-primary-100">{{'CATALOGS._all_catalogs' | translate}}</span></h1>
 
@@ -14,7 +14,7 @@
         <div class="w-full grid grid-cols-2 gap-4  sm:grid-cols-3 lg:grid-cols-4">
 
             @for (cat of catalogs; track cat.id) {
-                
+
                 <div (click)="goToCatalogSearch(cat.id)" class="block cursor-pointer rounded-lg dark:bg-white bg-cover" style="background-image: url(assets/logos/dome-logo-element-colour.png);" >
                     <div class="block w-full h-full p-6 bg-opacity-100 bg-secondary-50 rounded-lg dark:bg-white dark:border-gray-700 border-secondary-50 border bg-secondary-50/90 dark:bg-white/90 bg-cover">
                         <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{cat.name}}</h5>
@@ -23,8 +23,8 @@
                     </div>
                 </div>
 
-            }           
-            
+            }
+
         </div>
     }
     @if (!loading_more) {
