Add SIOP login support

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -49,7 +49,7 @@
         <span class="font-medium text-gray-600 dark:text-gray-300">{{usercharacters}}</span>
       </div>
       } @else {
-        <a href="http://localhost:8004/login" class="flex items-center">
+        <a href="{{loginUrl}}" class="flex items-center">
           <button id="theme-toggle" type="button" class="w-full mr-2 text-white dark:text-gray-400 hover:bg-secondary-50 hover:text-primary-100 dark:hover:bg-gray-700 rounded-lg text-sm p-2.5">
             Login</button>
         </a>
