--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mx-auto pt-2">
+<div class="container mx-auto pt-2 pb-8">
     <!-- Breadcrumb -->
     <div class="pb-4">
         <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
@@ -98,17 +98,25 @@
                 <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4 grid grid-cols-2 gap-14" id="info" role="tabpanel" aria-labelledby="info-tab">
                     <div>
                         <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._full_desc' | translate }}:</h5>
-                        <div class="min-h-19 dark:text-gray-600">{{productOff?.description}}</div>
-                        <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._comp_profile' | translate }}:</h5>
-                        <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
-                          @for (char of complianceProf; track char.id) {
-                            @if (char.href == '#') {
-                                <li>{{char.name}}: {{char.value}}</li>
-                            } @else {
-                                <li>{{char.name}}: <a href="{{char.href}}">{{char.value}}</a></li>
+                        <div class="min-h-19 dark:text-gray-600">
+                            <p>{{productOff?.description}}</p>
+                            @if(serviceSpecs.length > 0){
+                                <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PRODUCT_DETAILS._service_spec' | translate }}:</h5>
+                                <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
+                                    @for(service of serviceSpecs; track service.id){
+                                        <li><span class="font-bold">{{service.name}}: </span> {{service.description}}</li>
+                                    }
+                                </ul>
                             }
-                          }
-                        </ul>
+                            @if(resourceSpecs.length > 0){
+                                <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PRODUCT_DETAILS._resource_spec' | translate }}:</h5>
+                                <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
+                                    @for(resource of resourceSpecs; track resource.id){
+                                        <li><span class="font-bold">{{resource.name}}: </span> {{resource.description}}</li>
+                                    }
+                                </ul>
+                            }
+                        </div>
                     </div>
                     <div>
                         <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._extra_info' | translate }}:</h5>
@@ -124,6 +132,16 @@
                             <li>{{ 'CARD._id_number' | translate }}: XX</li>
                           </ul>
                         </div>
+                        <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._comp_profile' | translate }}:</h5>
+                        <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
+                          @for (char of complianceProf; track char.id) {
+                            @if (char.href == '#') {
+                                <li>{{char.name}}: {{char.value}}</li>
+                            } @else {
+                                <li>{{char.name}}: <a href="{{char.href}}">{{char.value}}</a></li>
+                            }
+                          }
+                        </ul>
                     </div>
 
                 </div>
