--- a/src/app/pages/product-inventory/product-inventory.component.html
+++ b/src/app/pages/product-inventory/product-inventory.component.html
@@ -7,16 +7,13 @@
 
         <div class="w-48 h-fit text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white">
             <button id="prod-button" (click)="getOffers()" aria-current="true" class="block w-full px-4 py-2 text-white bg-primary-100 border-b border-gray-200 rounded-t-lg cursor-pointer dark:border-gray-600 hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
-                Products
+              {{ 'PRODUCT_INVENTORY._products' | translate }}
             </button>
             <button id="serv-button" (click)="getServices()" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
-                Services
+              {{ 'PRODUCT_INVENTORY._services' | translate }}
             </button>
             <button id="res-button" (click)="getResources()" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
-                Resources
-            </button>
-            <button id="order-button" (click)="getOrders()" class="block w-full px-4 py-2 rounded-b-lg cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
-                Orders
+              {{ 'PRODUCT_INVENTORY._resources' | translate }}
             </button>
         </div>
 
@@ -26,7 +23,7 @@
                   <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
                   <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
               </svg>
-              <span class="sr-only">Loading...</span>
+              <span class="sr-only">{{ 'PRODUCT_INVENTORY._loading' | translate }}</span>
             </div>
           } @else {
             @if(show_prods){
@@ -77,7 +74,7 @@
                             </div>
                           </div>
                     } @empty {
-                      <div class="min-h-19 dark:text-gray-600 text-center">No se han encontrado ofertas.</div>
+                      <div class="min-h-19 dark:text-gray-600 text-center">{{ 'PRODUCT_INVENTORY._not_found' | translate }}.</div>
                     } 
                 </div>
             }
@@ -86,47 +83,6 @@
             }
             @if(show_res){
                 res
-            }
-            @if(show_orders){
-              <div class="place-items-center">
-                @for (order of orders; track order.id; let idx = $index) {
-                    <div class="w-full h-fit bg-secondary-50 rounded-lg dark:border-gray-700 border-secondary-50 border mb-4">
-
-                        <div class="p-4 overflow-hidden border-b border-b-primary-100 border-b-2 shadow-lg rounded-t-lg">
-                          <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{order?.orderDate | date:'EEEE, dd/MM/yy, HH:mm'}}</h5>
-                          <ul class="w-full space-y-1 list-disc list-inside dark:text-gray-600">
-                            <li><span class="font-bold">Order Id: </span> {{order.id}}</li>
-                            <li><span class="font-bold">State: </span> {{order.state}}</li>
-                            <li><span class="font-bold">Priority: </span> {{order.priority}}</li>
-                          </ul>
-                        </div>
-                      
-                        <div class="bg-cover bg-right-bottom bg-opacity-25 rounded-lg" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
-                          <div class="px-5 py-5 bg-secondary-50/95 rounded-lg">
-                            @for(item of order.productOrderItem; track item.id){
-                              <div class="grid grid-cols-20/80 mb-4 bg-secondary-50 border border-primary-100 border-2 rounded-lg shadow-xl">
-                                <div class="flex relative h-min-full w-min-full justify-center items-center rounded-lg">
-                                  <!-- Imagen de fondo difuminada -->
-                                  <div class="absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage(item)}});filter: blur(20px);"></div>
-                                  <!-- Imagen superior -->
-                                  <img [id]="'img-'+idx" class="h-5/6 w-5/6 object-contain z-10" src="{{getProductImage(item)}}" alt="Descripción de la imagen">
-                                </div>
-                                <div class="flex flex-col justify-start p-4 leading-normal dark:text-gray-600">
-                                    <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{item?.name}}</h5>
-                                    <span class="font-bold">Description: </span>
-                                    <span class="min-h-19 h-19 line-clamp-2">{{item.description}}</span>
-                                    <span class="font-bold">Price: </span>
-                                    <span class="min-h-19 h-19 line-clamp-2">{{item.productOfferingPrice.price}} {{item.productOfferingPrice.unit}} {{item.productOfferingPrice.text}}</span>
-                                </div>
-                              </div>
-                            }
-                          </div>
-                        </div>
-                    </div>
-                } @empty {
-                  <div class="min-h-19 dark:text-gray-600 text-center">No se han encontrado pedidos.</div>
-                } 
-            </div>
             }
           }
     </div>
