--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,5 +1,5 @@
 
-<div class="pr-8 pl-8 pb-8 pt-2">
+<div class="container mx-auto pt-2">
     <!-- Breadcrumb -->
     <div class="pb-4">
         <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
