--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -40,36 +40,12 @@
           </button>
         </div>
 
-        <div id="headlessui-radiogroup-:rg:" role="radiogroup" aria-labelledby="headlessui-label-:rh:"><label
-          class="sr-only" id="headlessui-label-:rh:" role="none">Billing Address</label>
+        <div id="billing-addresses" role="radiogroup" aria-labelledby="billing-addresses">
+          <label class="sr-only" id="billing-addresses-label" role="none">Billing Address</label>
           @if (billingAddresses.length > 0) {
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3" role="none">
-              @for(baddrr of billingAddresses; track baddrr) {
-                <div id="headlessui-radiogroup-option-:ri:" role="radio" aria-checked="true" tabindex="0"
-                     data-headlessui-state="checked">
-                  <div class="group relative cursor-pointer rounded border p-4 hover:border-primary-50 border-primary-100 shadow-sm bg-primary-50/50">
-                    <p class="mb-3 text-sm font-semibold capitalize text-heading">{{ baddrr.href }}</p>
-                    <p class="text-sm text-sub-heading">{{ baddrr.postalAddress.street }}, {{ baddrr.postalAddress.postCode }}, {{ baddrr.postalAddress.city}}, {{ baddrr.postalAddress.stateOrProvince }}, {{ baddrr.postalAddress.country }}</p>
-                    <div
-                      class="absolute top-4 flex space-x-2 opacity-0 group-hover:opacity-100 right-4">
-                      <button class="flex h-5 w-5 items-center justify-center rounded-full bg-accent text-light"><span
-                        class="sr-only">Edit</span>
-                        <svg class="h-3 w-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                          <path
-                            d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"></path>
-                        </svg>
-                      </button>
-                      <button class="flex h-5 w-5 items-center justify-center rounded-full bg-red-600 text-light" [disabled]="this.selectedBillingAddress !== undefined"><span
-                        class="sr-only">Delete</span>
-                        <svg class="h-3 w-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                          <path fill-rule="evenodd"
-                                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                      </button>
-                    </div>
-                  </div>
-                </div>
+              @for(baddr of billingAddresses; track baddr) {
+                <app-billing-address [data]="baddr" (selectedEvent)="onSelected(baddr)"></app-billing-address>
               }
             </div>
           } @else {
