--- a/src/app/shared/billing-account-form/billing-account-form.component.html
+++ b/src/app/shared/billing-account-form/billing-account-form.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="col-span-2">
         <label for="email" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._email' | translate }}</label>
-        <input id="email" formControlName="email" name="email" type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        <input id="email" [ngClass]="billingForm.get('email')?.invalid == true ? 'border-red-600' : 'border-gray-300'" formControlName="email" name="email" type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
     </div>
     <div>
         <label for="phoneType" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._phone_type' | translate }}</label>
@@ -86,9 +86,14 @@
                 <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM10 15a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 0 1-2 0V6a1 1 0 0 1 2 0v5Z"/>
             </svg>
         </div>
-        @if(billingForm.get('telephoneNumber')?.errors?.['invalidPhoneNumber'] == true){
-            <div class="ms-3 text-sm font-normal">{{ 'BILLING._invalid_phone' | translate }}</div>
-        }        
+        <div>
+            @if(billingForm.get('telephoneNumber')?.errors?.['invalidPhoneNumber'] == true){
+                <div class="block ms-3 text-sm font-normal">{{ 'BILLING._invalid_phone' | translate }}</div>
+            }
+            @if(this.billingForm.get('email')?.invalid == true){
+                <div class="block ms-3 text-sm font-normal">{{ 'BILLING._invalid_email' | translate }}</div>
+            }
+        </div>
         <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700" data-dismiss-target="#toast-warning" aria-label="Close">
             <span class="sr-only">Close</span>
             <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
